Added player view, bugfixes

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     }
     compile 'commons-io:commons-io:2.4'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile project(':dependencies:AndroidSlidingUpPanel:library')
     compile files('libs/presto_client-0.8.5.jar')
 }
 
