--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -100,6 +100,9 @@
                     android:path="de.danoeh.antennapodsp"
                     android:scheme="package"/>
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED"/>
+            </intent-filter>
         </receiver>
     </application>
 
