--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,6 +50,7 @@
 
         <activity
             android:name=".activity.MainActivity"
+            android:launchMode="singleTop"
             android:label="@string/app_name">
         </activity>
 
