--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ description
 # other
 *.odg#
 proguard
-libs
 *.DS_Store
-src/de/danoeh/antennapod/util/flattr/FlattrConfig.java
 gradle.properties
+dep/AndroidSlidingUpPanel/library/libs
+
