Made package name configurable

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ android {
     defaultConfig {
         minSdkVersion 10
         targetSdkVersion 19
+        packageName "de.danoeh.antennapodsp.custom"
         testPackageName "de.test.antennapod"
         testInstrumentationRunner "instrumentationTest.de.test.antennapod.AntennaPodTestRunner"
     }
