--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="de.danoeh.antennapodsp"
           android:versionCode="1"
-          android:versionName="1.0.0">
+          android:versionName="1.0.1">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -36,7 +36,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:logo="@drawable/ic_launcher"
-        android:theme="@style/Theme.AntennaPod.Light">
+        android:theme="@style/Theme.AntennaPod.Light"
+        android:debuggable="true">
 
         <activity
             android:name=".activity.InitActivity"
