Resolved proguard issues

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -60,3 +60,6 @@
 
 -keep class org.apache.commons.** { *; }
 -dontskipnonpubliclibraryclassmembers
+
+-dontwarn com.squareup.okhttp.**
+-dontwarn okio.**
