--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,8 +36,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:logo="@drawable/ic_launcher"
-        android:theme="@style/Theme.AntennaPod.Light"
-        android:debuggable="true">
+        android:theme="@style/Theme.AntennaPod.Light">
 
         <activity
             android:name=".activity.InitActivity"
