--- a/dep/AndroidSlidingUpPanel/demo/build.gradle
+++ b/dep/AndroidSlidingUpPanel/demo/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'android'
 
 buildscript {
   dependencies {
-    classpath 'com.android.tools.build:gradle:0.7.+'
+    classpath 'com.android.tools.build:gradle:1.5.0'
   }
 }
 
