--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,9 +33,9 @@
 
     <application
         android:name=".PodcastApp"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:logo="@drawable/ic_launcher"
+        android:logo="@mipmap/ic_launcher"
         android:theme="@style/Theme.AntennaPod.Light">
 
         <activity
